[package]
name = "libindy-js"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.libindy]
path = "../../libindy"
default-features = false
features = [
    "ed25519_sign_sodium", 
    "ed25519_box_sodium", 
    "sealedbox_sodium",
    "base58_rust_base58",
    "base64_rust_base64",
    "chacha20poly1305_ietf_sodium",
    "pair_amcl",
    "hash_openssl",
    "pwhash_argon2i13_sodium",
    "hmacsha256_sodium",
    "randombytes_sodium"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
